cmake_minimum_required(VERSION 3.10)
project(Tiger)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

SET(CMAKE_BUILD_TYPE "Debug") 
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -g2 -ggdb")
include_directories(compiler)
add_subdirectory(compiler)
# add_subdirectory(test/compiler_test)